# src/interface/http/controllers/products.controller.ts
@@ -1,5 +1,10 @@
 import { Controller, Get, Param } from '@nestjs/common';
-import { ApiNotFoundResponse, ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import {
+  ApiInternalServerErrorResponse,
+  ApiNotFoundResponse,
+  ApiOkResponse,
+  ApiTags,
+} from '@nestjs/swagger';
 import { ListProductsUseCase } from '../../../application/use-cases/list-products.usecase';
 import { ErrorDto } from '../dto/error.dto';
 import { ProductDto } from '../dto/product.dto';
@@ -11,6 +16,7 @@ export class ProductsController {
 
   @Get()
   @ApiOkResponse({ type: [ProductDto], description: 'Catálogo (servido via cache com TTL)' })
+  @ApiInternalServerErrorResponse({ type: ErrorDto, description: 'Erro interno inesperado' })
   async findAll(): Promise<ProductDto[]> {
     return this.listProducts.listAll();
   }
@@ -18,6 +24,7 @@ export class ProductsController {
   @Get(':id')
   @ApiOkResponse({ type: ProductDto })
   @ApiNotFoundResponse({ type: ErrorDto })
+  @ApiInternalServerErrorResponse({ type: ErrorDto, description: 'Erro interno inesperado' })
   async findOne(@Param('id') id: string): Promise<ProductDto> {
     return this.listProducts.getById(id);
   }
